<resources>
    <string name="app_name">Stoper</string>
    <string name="separator">:</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="add_minute_button">add minute button</string>
    <string name="add_second_button">add second button</string>
    <string name="minus_minute_button">minus minute button</string>
    <string name="minus_second_button">minus second button</string>
</resources>
